--- a/pacman.html
+++ b/pacman.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="pacman.js"></script>
         
     </head>
-    <body>
+    <body id='all'>
         pacman
         
     </body>
